--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,23 @@
 <html lang="en">
 
 <head>
-	<title>Flash Cardse</title>
+	<title>Flash Cards</title>
 	<script src="https://code.jquery.com/jquery-3.1.0.js"></script>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
 	    crossorigin="anonymous">
 </head>
 
 <body>
-
-	<button>Hello</button>
+	<div class="container-fluid">
+		<div class="col-md-6 offset-md-3">
+			<div class="col-md-12 jumbotron flashCard text-center">Fuck</div>
+			<button class="col-md-12 btn btn-default submitBtn" type="button">Flip Card</button>
+		</div>
+	</div>
 
 </body>
 <script src="js.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+    crossorigin="anonymous"></script>
+
 </html>
